# helvum

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build
build-aux/: org.pipewire.Helvum.json
data/: org.pipewire.Helvum.metainfo.xml.in
docs/: making_a_release.md
src/: application.rs  graph_manager.rs  main.rs  meson.build  pipewire_connection.rs  style.css
src/pipewire_connection/: mod.rs  state.rs
src/ui/: mod.rs  window.rs  window.ui
src/ui/graph/: graph_view.rs  link.rs  mod.rs  node.rs  node.ui  port.rs  port.ui  port_handle.rs  zoomentry.rs  zoomentry.ui
src/view/: graph_view.rs  mod.rs  node.rs  port.rs  zoomentry.rs  zoomentry.ui
