[package]
name = "helvum"
version = "0.4.1"
authors = ["Tom A. Wagner <tom.a.wagner@protonmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "GPL-3.0-only"
description = "A GTK patchbay for pipewire"
repository = "https://gitlab.freedesktop.org/pipewire/helvum"
readme = "README.md"
keywords = ["pipewire", "gtk", "patchbay", "gui", "utility"]
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = "0.7"
gtk = { version = "0.7", package = "gtk4" }
glib = { version = "0.18", features = ["log"] }

log = "0.4.11"

once_cell = "1.7.2"
