[package]
name = "helvum"
version = "0.5.1"
authors = ["Tom Wagner <tom.a.wagner@protonmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "GPL-3.0-only"
description = "A GTK patchbay for pipewire"
repository = "https://gitlab.freedesktop.org/pipewire/helvum"
readme = "README.md"
keywords = ["pipewire", "gtk", "patchbay", "gui", "utility"]
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = "0.8.0"
adw = { version = "0.6", package = "libadwaita", features = ["v1_4"] }
glib = { version = "0.19", features = ["log"] }
async-channel = "2.2"

log = "0.4.11"

once_cell = "1.19"

libc = "0.2"
